helm/vault/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
